--- a/app/javascript/styles/basics.scss
+++ b/app/javascript/styles/basics.scss
@@ -13,6 +13,7 @@ body {
   text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-tap-highlight-color: transparent;
+  outline: none
 
   &.app-body {
     position: fixed;
